--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "build": "gatsby build"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
+    "framer-motion": "^1.10.3",
     "gatsby": "^2.18.18",
     "gatsby-theme-codebushi": "1.0.0",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "react-pose": "^4.0.10"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
