--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^3.7.2",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.18.18",
+    "gatsby-image": "^2.3.2",
     "gatsby-theme-codebushi": "1.0.0",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
