--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "start": "npm run develop",
     "develop": "gatsby develop",
     "build": "gatsby build"
   },
